<resources>
    <string name="app_name">Centura_Bhagyalakshmi</string>
    <string name="Username_hint">Username</string>
    <string name="title_activity_change">ChangeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_hint">Password</string>
    <string name="login">Log In</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">Dash Board</string>
    <string name="retailers_and_distributors">Retailers and Distributors</string>
    <string name="viewmore">View more</string>
    <string name="title_activity_order">Bhagyalakshmi Enterprises</string>
    <string name="dashboard_statistics">dashboard statictics</string>
    <string name="title_activity_change_password1">ChangePassword</string>
    <string name="splash_name">Bhagyalakshmi</string>
    <string name="title_activity_select_order_activity">Bhagyalakshmi Enterprises</string>
    <string name="order_total">Total:</string>
    <string name="addandnew">SAVE AND NEW</string>
    <string name="quantity">Quantity</string>

    <string name="category">Category</string>
    <string name="select_product">Select Product</string>
    <string name="units">Units</string>
    <string name="price">Price</string>
    <string name="tax">Tax</string>
    <string name="amount">Amount</string>
    <string name="save_button_title">SAVE</string>

</resources>
