<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="materialtest.example.centura.centura_bhagyalakshmi.order.controller.AddOrderActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/category" />

            <Spinner
                android:id="@+id/sp_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:padding="25dp">

            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/select_product" />

            <Spinner
                android:id="@+id/sp_select_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:padding="25dp">

            </Spinner>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/units" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_units"
                android:background="@drawable/shape"
                android:padding="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/quantity" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/decrement_quantity"
                    android:layout_width="@dimen/dimen_50dp"
                    android:layout_height="@dimen/dimen_50dp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_toLeftOf="@+id/product_quantity"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:src="@drawable/ic_ic_minus_grey600_24dp"/>

                <ImageButton
                    android:id="@+id/increment_quantity"
                    android:layout_width="@dimen/dimen_50dp"
                    android:layout_height="@dimen/dimen_50dp"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_toRightOf="@+id/product_quantity"
                    android:src="@drawable/ic_ic_plus_grey600_24dp"/>

                <EditText
                    android:id="@+id/product_quantity"
                    android:layout_width="@dimen/dimen_120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="1"
                    android:gravity="center"
                    android:padding="15dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/price" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_price"
                android:background="@drawable/shape"
                android:padding="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/tax" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_tax"
                android:background="@drawable/shape"
                android:padding="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/amount" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_amount"
                android:background="@drawable/shape"
                android:padding="@dimen/activity_horizontal_margin"/>
        <LinearLayout
            android:padding="@dimen/dimen_2dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:layout_marginBottom="@dimen/dimen_10dp">
            <Button
                android:layout_margin="@dimen/dimen_2dp"
                android:id="@+id/button_add"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/save_button_title"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>
            <Button
                android:layout_margin="@dimen/dimen_2dp"
                android:id="@+id/button_add_new"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/addandnew"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:layout_marginRight="@dimen/dimen_10dp"/>
            </LinearLayout>




        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
