<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_dash_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="materialtest.example.centura.centura_bhagyalakshmi.dashboard.DashBoardActivity"
    tools:showIn="@layout/app_bar_dash_board">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/color_400"
                    android:gravity="center"
                    android:text="50"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="normal|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <android.support.v7.widget.CardView
                    android:id="@+id/retailers_distributors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:paddingBottom="@dimen/activity_horizontal_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin"
                        android:paddingTop="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:padding="5dp"
                            android:text="@string/retailers_and_distributors"
                            android:textColor="@color/color_400"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_1dp"
                            android:layout_marginBottom="2dp"
                            android:layout_marginTop="@dimen/dimen_2dp"
                            android:background="@color/color_400" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/dimen_10dp"
                            android:paddingRight="@dimen/dimen_10dp"
                            android:paddingTop="@dimen/dimen_10dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/black">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/view_1dp"
                                    android:background="@color/white"
                                    android:orientation="vertical"
                                    android:padding="@dimen/dimen_2dp">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="150"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Bangalore" />

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/black">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/view_1dp"
                                    android:background="@color/white"
                                    android:orientation="vertical"
                                    android:padding="@dimen/dimen_2dp">

                                    <TextView
                                        android:id="@+id/textView2"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="150"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Bangalore" />

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/black">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/view_1dp"
                                    android:background="@color/white"
                                    android:orientation="vertical"
                                    android:padding="@dimen/dimen_2dp">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="150"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Bangalore" />

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/black">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginBottom="@dimen/view_1dp"
                                    android:background="@color/white"
                                    android:orientation="vertical"
                                    android:padding="@dimen/dimen_2dp">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="150"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Bangalore" />

                                </LinearLayout>
                            </LinearLayout>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:padding="10dp"
                                android:text="@string/viewmore"
                                android:textColor="@color/colorPrimary"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/statictics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:padding="@dimen/activity_horizontal_margin">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:padding="@dimen/dimen_4dp"
                            android:text="@string/dashboard_statistics"
                            android:textColor="@color/color_400"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_1dp"
                            android:layout_marginBottom="@dimen/dimen_2dp"
                            android:layout_marginTop="@dimen/dimen_2dp"
                            android:background="@color/color_400" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:src="@drawable/chart" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
